# Scrapper

./: .gitignore  DEPLOYMENT_INSTRUCTIONS.md  README.md  RENDER_DEPLOYMENT.md  app.py  deploy_to_github.py  enhanced_scraper_with_credentials.py  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt  start.sh
